[gd_scene load_steps=44 format=3 uid="uid://b87j2e2rsu88h"]

[ext_resource type="PackedScene" uid="uid://cu152iitwfet2" path="res://objects/modules/cgc/base_rooms/cgc_finale_room.tscn" id="1_mmshg"]
[ext_resource type="PackedScene" uid="uid://direah3lbjuu5" path="res://objects/battle/battle_node/battle_node.tscn" id="2_rx16n"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/misc_movies/slendercog_boss/slendercog_intro.gd" id="3_0e570"]
[ext_resource type="PackedScene" uid="uid://dflwjcy6fj0av" path="res://objects/cog/cog.tscn" id="3_b8xw3"]
[ext_resource type="Resource" uid="uid://cfgq4sxagf8fo" path="res://objects/cog/presets/misc/slender_cog.tres" id="4_25su3"]
[ext_resource type="PackedScene" uid="uid://bdp0i14kr0hs4" path="res://objects/battle/misc_battle_objects/tv_static/tv_static.tscn" id="5_6dda5"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/cog_attacks/cog_attack.gd" id="7_ioibr"]
[ext_resource type="Resource" uid="uid://doowiij7lpxy1" path="res://objects/battle/battle_resources/cog_attacks/resources/rubber_stamp.tres" id="8_xp6yb"]
[ext_resource type="PackedScene" uid="uid://bptrv8nm0esos" path="res://models/cogs/heads/gladhander.glb" id="9_370r7"]
[ext_resource type="Texture2D" uid="uid://in7gk76fauii" path="res://models/cogs/heads/no_more_face_man.png" id="10_smhgv"]
[ext_resource type="Script" path="res://objects/cog/cogdna.gd" id="11_8wrdy"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/status_effect.gd" id="11_32hyv"]
[ext_resource type="Resource" uid="uid://dy5pfjs8ivlt3" path="res://objects/cog/presets/misc/vessel.tres" id="12_g6khf"]
[ext_resource type="Script" path="res://objects/cog/cog_pool.gd" id="12_n57ab"]
[ext_resource type="Resource" uid="uid://c24yy1wqmg24o" path="res://objects/battle/battle_resources/cog_attacks/resources/razzle_dazzle.tres" id="12_vg7rx"]
[ext_resource type="PackedScene" uid="uid://i3q2b1jvfc74" path="res://models/cogs/heads/yesman.glb" id="13_v2pu4"]
[ext_resource type="Shader" path="res://objects/battle/misc_battle_objects/tv_static/vignette.gdshader" id="17_q5l77"]
[ext_resource type="AudioStream" uid="uid://cik845h8j6l" path="res://audio/sfx/battle/cogs/misc/staticlight.ogg" id="17_xvbh6"]
[ext_resource type="AudioStream" uid="uid://ugb4nuwn8oce" path="res://audio/sfx/battle/cogs/misc/staticmedium.ogg" id="18_kw3o7"]
[ext_resource type="AudioStream" uid="uid://bo1fabhs1xuxg" path="res://audio/music/slendercog_ambience/Slendercog P1.mp3" id="19_ysamv"]
[ext_resource type="AudioStream" uid="uid://cav5giw2bx362" path="res://audio/music/slendercog_ambience/Slendercog P2.ogg" id="20_ylp1r"]
[ext_resource type="PackedScene" uid="uid://ciabqn4r1h12x" path="res://objects/battle/misc_battle_objects/static_meter/static_meter.tscn" id="21_bxa61"]
[ext_resource type="AudioStream" uid="uid://ddi5y1n60iw1n" path="res://audio/music/slendercog_ambience/Slendercog P3 v1real.ogg" id="21_jqjl8"]
[ext_resource type="AudioStream" uid="uid://bxtfv3qamplgk" path="res://audio/music/slendercog_ambience/Slendercog P4.ogg" id="22_qmb0s"]
[ext_resource type="AudioStream" uid="uid://ckso2ckvlodjb" path="res://audio/music/slendercog_ambience/Slendercog P2 Cello1.mp3" id="23_2jny3"]
[ext_resource type="AudioStream" uid="uid://ofruxr5hke71" path="res://audio/music/slendercog_ambience/Slendercog P2 Cello2.mp3" id="24_723x7"]
[ext_resource type="AudioStream" uid="uid://degi0ug325nju" path="res://audio/music/slendercog_ambience/Slendercog P2 Cello3.mp3" id="25_kcvh2"]
[ext_resource type="AudioStream" uid="uid://b8y2mamb4spdw" path="res://audio/music/slendercog_ambience/Slendercog P2 Cello4.mp3" id="26_sc4fx"]
[ext_resource type="AudioStream" uid="uid://c7o75fti7mgq1" path="res://audio/music/slendercog_ambience/Slendercog P2 Shrill1.ogg" id="27_asi3l"]
[ext_resource type="AudioStream" uid="uid://c45eb5htvmil0" path="res://audio/music/slendercog_ambience/Slendercog P2 Shrill2.ogg" id="28_cvuxo"]
[ext_resource type="AudioStream" uid="uid://rb00cverdag" path="res://audio/music/slendercog_ambience/Slendercog P4 Gong1.ogg" id="29_56hv4"]
[ext_resource type="AudioStream" uid="uid://dyqgv7hqri1jn" path="res://audio/music/slendercog_ambience/Slendercog P4 Gong2.ogg" id="30_t474u"]
[ext_resource type="PackedScene" uid="uid://dnx5hllemtty1" path="res://objects/battle/misc_battle_objects/tv_static/tv_static_noshader.tscn" id="33_mnjf0"]

[sub_resource type="GDScript" id="GDScript_7yq8o"]
resource_name = "slendercog_boss_directory"
script/source = "extends Node3D

const STATIC_GOALS : Array[float] = [0.2,0.45,0.75]
const BASE_VOLUME := -20.0

## Child References
@onready var slendercog : Cog = $BattleNode/Slendercog
@onready var tv_static : TextureRect = $TVStatic
@onready var cutscene_static : TextureRect = $StaticNoShader
@onready var camera_angles := $CameraAngles
@onready var char_positions := $CharPositions
@onready var sfx_static := $StaticSFX
@onready var static_meter := $StaticMeter
@onready var battle : BattleNode = $BattleNode
@onready var music : Node = %DynamicMusic
var during_round := true

var alpha : float:
	get:
		return tv_static.alpha

func _ready() -> void:
	prepare_music()
	
	
	# Await battle start
	await battle.s_battle_initialized
	var manager : BattleManager = await BattleService.s_battle_started
	manager.s_action_added.connect(on_action_added)
	manager.s_participant_will_die.connect(someone_died.bind(manager))
	manager.s_round_started.connect(func(_actions): during_round = true)
	manager.s_actions_ended.connect(func(): during_round = false)
	
	# Give the battle win movie to the manager
	var end_movie := SlenderBossEnd.new()
	end_movie.slendercog_directory = self
	manager.battle_win_movie = end_movie

func get_camera_angle(angle : String) -> Transform3D:
	var node := camera_angles.find_child(angle)
	if node:
		return node.global_transform
	return global_transform

func get_character_pos(pos : String) -> Vector3:
	var node := char_positions.find_child(pos)
	if node:
		return node.global_position
	return Vector3.ZERO

func static_alpha_changed(alpha : float) -> void:
	for i in sfx_static.get_child_count():
		var player : AudioStreamPlayer = sfx_static.get_child(i)
		var goal : float = STATIC_GOALS[i]
		var goal_ratio := minf(alpha / goal, 1.0)
		player.set_volume_db(BASE_VOLUME - (BASE_VOLUME * goal_ratio))
	static_meter.value = alpha / SlenderStaticIncrease.ALPHA_GOAL

## Inserts self into related battle actions
func on_action_added(action : BattleAction):
	if action and 'slendercog_directory' in action:
		action.slendercog_directory = self

func someone_died(who : Node3D, manager : BattleManager) -> void:
	if not who == slendercog:
		return
	
	# Slendercog has died
	var action := SlenderPossession.new()
	action.user = self
	action.targets = [self]
	manager.round_end_actions.append(action)
	action.should_increase = during_round
	
	# Let's decrease static a bit
	if alpha >= 0.2:
		var tween := create_tween()
		tween.tween_method(tv_static.set_alpha, alpha, alpha - 0.2, 2.0)
		tween.finished.connect(tween.kill)

func on_battle_ended() -> void:
	Globals.s_slendercog_boss_defeated.emit()
	
	if prev_music:
		AudioManager.set_default_music(prev_music)
	music.queue_free()

func prepare_music() -> void:
	for audio_player : AudioStreamPlayer in music.get_children():
		audio_player.volume_db = -INF
		audio_player.play()
	
	%RandomAmbienceTimer.start()
	await %RandomAmbienceTimer.timeout
	%RandomAmbienceTimer.stop()
	%RandomAmbienceTimer.wait_time = 16.0
	%RandomAmbienceTimer.start()

var ambience_level := 0
func increment_ambience() -> void:
	ambience_level += 1
	
	var on_players : Array[AudioStreamPlayer] = []
	var off_players : Array[AudioStreamPlayer] = []
	match ambience_level:
		1:
			on_players.append(music.get_node('Loop1'))
		3:
			on_players.append(music.get_node('Loop2'))
			on_players.append(music.get_node('Cello'))
			on_players.append(music.get_node('Shrill'))
			off_players.append(music.get_node('Loop1'))
		6:
			on_players.append(music.get_node('Loop3'))
			off_players.append(music.get_node('Loop2'))
			off_players.append(music.get_node('Cello'))
			off_players.append(music.get_node('Shrill'))
		8:
			on_players.append(music.get_node('Loop4'))
			on_players.append(music.get_node('Gong'))
			off_players.append(music.get_node('Loop3'))
		_: 
			return
	
	var ambience_tween := create_tween().set_parallel(true).set_trans(Tween.TRANS_QUAD)
	for player in on_players:
		player.volume_db = -20.0
		if player.name.contains('Loop'): ambience_tween.tween_property(player, 'volume_db', 0.0, 2.0)
		else: ambience_tween.tween_property(player, 'volume_db', 10.0, 2.0)
	for player in off_players:
		ambience_tween.tween_property(player, 'volume_db', -20.0, 2.0)
	
	ambience_tween.finished.connect(
		func():
			ambience_tween.kill()
			for player in off_players:
				player.volume_db = -INF
	)

var prev_music : AudioStream
func mute_music() -> void:
	prev_music = AudioManager.default_music
	var music_tween := create_tween()
	music_tween.tween_property(AudioManager.music_player, 'volume_db', -20.0, 2.0)
	music_tween.tween_callback(AudioManager.stop_music.bind(true))
	music_tween.tween_callback(AudioManager.music_player.set_volume_db.bind(0.0))
	music_tween.finished.connect(music_tween.kill)
"

[sub_resource type="Resource" id="Resource_5xd7t"]
script = ExtResource("3_0e570")
skippable = true

[sub_resource type="Resource" id="Resource_7g6l0"]
script = ExtResource("11_8wrdy")
department = 0
suit = 2
cog_name = "???"
name_plural = ""
head = ExtResource("9_370r7")
head_scale = Vector3(1, 1, 1)
head_pos = Vector3(0, 0, 0)
scale = 4.75
head_textures = Array[Texture2D]([ExtResource("10_smhgv")])
hand_color = Color(0.94902, 0.74902, 0.94902, 1)
head_color = Color(1, 1, 1, 1)
custom_nametag_height = 0.0
custom_nametag_suffix = ""
attacks = Array[ExtResource("7_ioibr")]([ExtResource("8_xp6yb")])
level_low = 4
level_high = 8
status_effects = Array[ExtResource("11_32hyv")]([])
is_mod_cog = false
is_admin = false
health_mod = 1.0
battle_phrases = Array[String](["You'll find I'm a handful", "I'm a very hands-on kinda guy.", "Offhandedly, I'd say you're in trouble.", "Let's get right to the business at hand.", "I think the handwriting is on the wall.", "I can be quite handy.", "Would you like some hand-me-downs?", "Let me show you some of my handiwork.", "Let's seal the deal.", "Let's shake on it.", "Put it there, Toon.", "You'll notice I have a very firm grip.", "I'm going to enjoy this.", "This is going to be fun.", "I'm glad you came!"])
external_assets = {
"head_model": "",
"head_textures": []
}

[sub_resource type="Resource" id="Resource_5ii2d"]
script = ExtResource("11_8wrdy")
department = 0
suit = 0
cog_name = "???"
name_plural = ""
head = ExtResource("13_v2pu4")
head_scale = Vector3(1, 1, 1)
head_pos = Vector3(0, 0, 0)
scale = 7.0
head_textures = Array[Texture2D]([ExtResource("10_smhgv")])
hand_color = Color(0.94902, 0.74902, 0.94902, 1)
head_color = Color(1, 1, 1, 1)
custom_nametag_height = 0.0
custom_nametag_suffix = ""
attacks = Array[ExtResource("7_ioibr")]([ExtResource("12_vg7rx")])
level_low = 8
level_high = 12
status_effects = Array[ExtResource("11_32hyv")]([])
is_mod_cog = false
is_admin = false
health_mod = 1.0
battle_phrases = Array[String](["I'm ready to rock and roll your end credits.", "Today the role of defeated Toon will be played by - YOU!", "Lights, camera, action!", "I told you not to call me.", "Are you ready for your final scene?", "I hope you don't forget your lines.", "This scene will go on the cutting room floor.", "There's no business like it!", "Let's start rolling."])
external_assets = {
"head_model": "",
"head_textures": []
}

[sub_resource type="Resource" id="Resource_d0722"]
script = ExtResource("12_n57ab")
cogs = Array[ExtResource("11_8wrdy")]([SubResource("Resource_7g6l0"), ExtResource("12_g6khf"), SubResource("Resource_5ii2d")])

[sub_resource type="BoxShape3D" id="BoxShape3D_meq3u"]
size = Vector3(8.67212, 5.26587, 11.3602)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yxpmw"]
shader = ExtResource("17_q5l77")
shader_parameter/base_alpha = 0.0
shader_parameter/alpha_high = 1.0
shader_parameter/alpha_low = 0.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ndxqa"]
streams_count = 4
stream_0/stream = ExtResource("23_2jny3")
stream_1/stream = ExtResource("24_723x7")
stream_2/stream = ExtResource("25_kcvh2")
stream_3/stream = ExtResource("26_sc4fx")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_p2jc5"]
streams_count = 2
stream_0/stream = ExtResource("27_asi3l")
stream_1/stream = ExtResource("28_cvuxo")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xervm"]
streams_count = 2
stream_0/stream = ExtResource("29_56hv4")
stream_1/stream = ExtResource("30_t474u")

[node name="cgc_kart_boarding_room" instance=ExtResource("1_mmshg")]

[node name="BossFight" type="Node3D" parent="." index="28"]
script = SubResource("GDScript_7yq8o")

[node name="BattleNode" parent="BossFight" index="0" node_paths=PackedStringArray("cogs", "focus_cog") instance=ExtResource("2_rx16n")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.83406, -0.0134251, 0)
cogs = [NodePath("Cog"), NodePath("Cog2"), NodePath("Slendercog"), NodePath("Cog3")]
focus_cog = NodePath("Slendercog")
override_intro = SubResource("Resource_5xd7t")
boss_battle = true

[node name="Slendercog" parent="BossFight/BattleNode" index="3" instance=ExtResource("3_b8xw3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25697, 0, 0)
visible = false
level_range_offset = 4
dna = ExtResource("4_25su3")
skelecog_chance = -1
fusion_chance = -1

[node name="Cog" parent="BossFight/BattleNode" index="4" instance=ExtResource("3_b8xw3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5393, 0, 8.27724)
visible = false
level_range_offset = 3
pool = SubResource("Resource_d0722")
use_floor_pool = false
dna = ExtResource("12_g6khf")
skelecog_chance = -1
fusion_chance = -1

[node name="Cog2" parent="BossFight/BattleNode" index="5" instance=ExtResource("3_b8xw3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.340361, 0, 8.27724)
visible = false
level_range_offset = 1
pool = SubResource("Resource_d0722")
use_floor_pool = false
dna = ExtResource("12_g6khf")
skelecog_chance = -1
fusion_chance = -1

[node name="Cog3" parent="BossFight/BattleNode" index="6" instance=ExtResource("3_b8xw3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.99606, 0, 8.27724)
visible = false
level_range_offset = 2
pool = SubResource("Resource_d0722")
use_floor_pool = false
dna = ExtResource("12_g6khf")
skelecog_chance = -1
fusion_chance = -1

[node name="CollisionShape3D" type="CollisionShape3D" parent="BossFight/BattleNode" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.402954, 2.66833, 5.18011)
shape = SubResource("BoxShape3D_meq3u")

[node name="TVStatic" parent="BossFight" index="1" instance=ExtResource("5_6dda5")]
material = SubResource("ShaderMaterial_yxpmw")
alpha = 0.0

[node name="CharPositions" type="Node3D" parent="BossFight" index="2"]

[node name="EnterPos" type="Node3D" parent="BossFight/CharPositions" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.718922, 0, 0)

[node name="BackAwayPos" type="Node3D" parent="BossFight/CharPositions" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.4614, 0, 0)

[node name="RunAwayPos" type="Node3D" parent="BossFight/CharPositions" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.22386, 0, 0)

[node name="CameraAngles" type="Node3D" parent="BossFight" index="3"]

[node name="AngleStart" type="Node3D" parent="BossFight/CameraAngles" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.81, 1.5, 0)

[node name="AngleStart2" type="Node3D" parent="BossFight/CameraAngles" index="1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 1.5, 0)

[node name="PanShot" type="Node3D" parent="BossFight/CameraAngles" index="2"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -0.712131, 1.34, 0)

[node name="StaticSFX" type="Node" parent="BossFight" index="4"]

[node name="Light" type="AudioStreamPlayer" parent="BossFight/StaticSFX" index="0"]
stream = ExtResource("17_xvbh6")
volume_db = -80.0
autoplay = true

[node name="Medium" type="AudioStreamPlayer" parent="BossFight/StaticSFX" index="1"]
stream = ExtResource("18_kw3o7")
volume_db = -80.0
autoplay = true

[node name="DynamicMusic" type="Node" parent="BossFight" index="5"]
unique_name_in_owner = true

[node name="Loop1" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="0"]
stream = ExtResource("19_ysamv")
bus = &"Music"

[node name="Loop2" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="1"]
stream = ExtResource("20_ylp1r")
bus = &"Music"

[node name="Loop3" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="2"]
stream = ExtResource("21_jqjl8")
bus = &"Music"

[node name="Loop4" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="3"]
stream = ExtResource("22_qmb0s")
bus = &"Music"

[node name="Cello" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="4"]
stream = SubResource("AudioStreamRandomizer_ndxqa")
bus = &"Music"

[node name="Shrill" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="5"]
stream = SubResource("AudioStreamRandomizer_p2jc5")
bus = &"Music"

[node name="Gong" type="AudioStreamPlayer" parent="BossFight/DynamicMusic" index="6"]
stream = SubResource("AudioStreamRandomizer_xervm")
bus = &"Music"

[node name="StaticMeter" parent="BossFight" index="6" instance=ExtResource("21_bxa61")]
visible = false

[node name="RandomAmbienceTimer" type="Timer" parent="BossFight" index="7"]
unique_name_in_owner = true
wait_time = 4.0

[node name="StaticNoShader" parent="BossFight" index="8" instance=ExtResource("33_mnjf0")]
modulate = Color(1, 1, 1, 0)

[connection signal="s_battle_end" from="BossFight/BattleNode" to="BossFight" method="on_battle_ended"]
[connection signal="s_alpha_changed" from="BossFight/TVStatic" to="BossFight" method="static_alpha_changed"]
[connection signal="timeout" from="BossFight/RandomAmbienceTimer" to="BossFight/DynamicMusic/Cello" method="play"]
[connection signal="timeout" from="BossFight/RandomAmbienceTimer" to="BossFight/DynamicMusic/Shrill" method="play"]
[connection signal="timeout" from="BossFight/RandomAmbienceTimer" to="BossFight/DynamicMusic/Gong" method="play"]
